# stos

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  audio.c  deny.toml  main.c  stos.h  stos_util.c  stos_util.h  sub.c  sub_input.h  sub_new.c
.github/workflows/: rust.yml
crates/extract/: .gitignore  Cargo.toml
crates/extract/src/: main.rs  subtitle.rs  time.rs
crates/extract/tests/: cli.rs
crates/extract/tests/media/: sub.srt  zero_length.srt
fuzz/: .gitignore  Makefile  ass_extract_fuzz.c  fuzz.c
src/: anki.rs  args.rs  ass.rs  audio.rs  format.rs  image.rs  main.rs  subtitle.rs  time.rs  util.rs
test/: Makefile
test/ass/: extract.c
test/sub/: convert_ass_blob.c  convert_rect.c  convert_srt_blob.c  convert_sub.c  extract.c
test/util/: nstrchr.c
tests/: cli.rs
tests/media/: mergable_sub.srt  sub.srt  test.ass  zero_length.srt
