[package]
name = "stos"
version = "0.2.3"
edition = "2021"
authors = ["Hyxogen"]
license = "MIT"
homepage = "https://github.com/Hyxogen/stos"
repository = "https://github.com/Hyxogen/stos"
keywords = ["anki", "subs2srs", "srs"]
categories = ["command-line-utilities", "multimedia"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
crossbeam-channel = "0.5.12"
ffmpeg-next = "6.1.0"
genanki-rs = { git = "https://github.com/Hyxogen/genanki-rs.git", version = "0.3.1" }
human-panic = "1.2.3"
image = "0.25.0"
indicatif = "0.17.8"
indicatif-log-bridge = "0.2.1"
itertools = "0.12.1"
lexopt = "0.3.0"
log = "0.4.21"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
rayon = "1.10.0"
regex = "1.10.3"
serde = "1.0.197"
serde_json = "1.0.114"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
tempfile = "3.10.1"
