[package]
name = "extract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.19", features = ["derive"] }
clap-verbosity-flag = "2.0.1"
ffmpeg-next = "6.0.0"
image = "0.24.6"
log = "0.4.19"
pretty_env_logger = "0.5.0"

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.3"
